# openab

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.claude  Dockerfile.codex  Dockerfile.copilot  Dockerfile.cursor  Dockerfile.gemini  Dockerfile.ollama  Dockerfile.opencode  Dockerfile.whatsapp  Makefile  README.md  RELEASING.md  agents-linebot.md  build.bat  config-codex.toml  config-copilot-native.toml  config-copilot.toml  config-gemini.toml  config.toml.example  deploy-line.sh  eksctl-line-cluster.yaml  index.yaml  openab-healthcheck.ps1  run-hidden.vbs  run-openab-claude.bat  run-openab-codex.bat  run-openab-copilot-native.bat  run-openab-copilot.bat  run-openab-gemini.bat  sandbox-deploy-policy-1.json  sandbox-deploy-policy-2.json  sandbox-trust-policy.json  setup-autoscaling.sh  test-pending-screening.md
.backups/: copilot-config.json.bak
.github/: CODEOWNERS  copilot-instructions.md
.pr-drafts/: windows-instant-fix.md
adapters/ollama-acp/: Cargo.toml  README.md
adapters/ollama-acp/src/: main.rs  ollama.rs  protocol.rs
docs/: agent-installable-tools.md  ai-install-upgrade.md  claude-code.md  codex.md  config-reference.md  copilot.md  cronjob.md  discord-bot-howto.md  discord.md  feature-flags.md  feishu.md  gemini.md  gh-auth-device-flow.md  github-token-setup.md  github-webhook-integration.md  gitlab-auth-device-flow.md  gitlab-token-setup.md  gitlab-webhook-integration.md  google-chat.md  handoff.md  kiro.md  line-bot-howto.md  line.md  local-dev.md  message-dispatch-modes.md  msteams-enterprise.md  msteams.md  (+8 more)
(+110 files in other folders)
