[package]
name = "agent-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
teloxide = { version = "0.13", features = ["macros"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
anyhow = "1"
rand = "0.8"
base64 = "0.22"
