[package]
name = "ollama-acp"
version = "0.1.0"
edition = "2021"
description = "ACP adapter for Ollama — bridges openab to local LLM via Ollama HTTP API"
license = "MIT"

[[bin]]
name = "ollama-acp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
